[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynaprompt"
version = "0.1.3"
description = "Dynamic prompt management and configuration library for LLM applications. Powerful, lazy-loading, and supports Jinja2 templates and Pydantic schemas."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Mohamed Emam" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "pydantic>=2.0.0",
]
keywords = [
    "prompt-management",
    "prompt-engineering",
    "dynamic-prompts",
    "llm",
    "ai",
    "generative-ai",
    "templates",
    "jinja2",
    "pydantic",
    "lazy-loading",
    "configuration",
    "llmops",
    "rag",
    "agent",
    "openai",
    "anthropic",
    "gemini",
    "llama",
    "structured-data",
    "python",
]
[project.urls]
Homepage = "https://github.com/mohamed-em2m/dynaprompt"
Repository = "https://github.com/mohamed-em2m/dynaprompt"
Documentation = "https://github.com/mohamed-em2m/dynaprompt#readme"
Issues = "https://github.com/mohamed-em2m/dynaprompt/issues"
Changelog = "https://github.com/mohamed-em2m/dynaprompt/releases"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "pre-commit>=4.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dynaprompt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=dynaprompt --cov-report=term-missing"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
